[package]
name = "particle_life"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
bevy = { version = "0.16", default-features = false, features = ["bevy_state"] }
godot = "0.4"
godot-bevy = { version = "0.9.2", features = ["default"] }

[workspace]
# Empty workspace table to make this a standalone project

[lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = ['cfg(feature, values("trace_tracy"))']
